Fix project selector width on mobile

--- a/assets/sass/components/select.scss
+++ b/assets/sass/components/select.scss
@@ -29,6 +29,11 @@ div.select__control {
   line-height: 1.3;
   color: var(--color-fg);
 }
+@media (max-width: $breakpoint-phone) {
+  div.select__control {
+    min-width: 125px;
+  }
+}
 
 div.select__menu {
   border: 1px solid var(--color-border-med);
